todoyu search changelog

search 1.1.0
	* 2.1 dev version

search 1.0.7
 	* Start changelog