@@ -1,0 +1,3 @@
+<span>{$itemsAmount} {$itemsLabel}</span>
+
+{$itemsList}
